implements changes to auth queries to fetch tenant ids and verified status