@@ -19,8 +19,10 @@ package io.supertokens.inmemorydb.queries;
 import io.supertokens.inmemorydb.ConnectionPool;
 import io.supertokens.inmemorydb.ConnectionWithLocks;
 import io.supertokens.inmemorydb.Start;
+import io.supertokens.inmemorydb.Utils;
 import io.supertokens.inmemorydb.config.Config;
 import io.supertokens.pluginInterface.RowMapper;
+import io.supertokens.pluginInterface.authRecipe.LoginMethod;
 import io.supertokens.pluginInterface.exceptions.StorageQueryException;
 import io.supertokens.pluginInterface.exceptions.StorageTransactionLogicException;
 import io.supertokens.pluginInterface.multitenancy.AppIdentifier;
@@ -36,6 +38,7 @@ import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static io.supertokens.inmemorydb.QueryExecutorTemplate.execute;
 import static io.supertokens.inmemorydb.QueryExecutorTemplate.update;
@@ -69,7 +72,8 @@ public class PasswordlessQueries {
                 + "UNIQUE (app_id, tenant_id, phone_number),"
                 + "PRIMARY KEY (app_id, tenant_id, user_id),"
                 + "FOREIGN KEY (app_id, tenant_id, user_id)"
-                + " REFERENCES " + Config.getConfig(start).getUsersTable() + "(app_id, tenant_id, user_id) ON DELETE CASCADE"
+                + " REFERENCES " + Config.getConfig(start).getUsersTable() +
+                "(app_id, tenant_id, user_id) ON DELETE CASCADE"
                 + ");";
         // @formatter:on
     }
@@ -85,7 +89,7 @@ public class PasswordlessQueries {
                 + "failed_attempts INT UNSIGNED NOT NULL,"
                 + "PRIMARY KEY (app_id, tenant_id, device_id_hash),"
                 + "FOREIGN KEY(app_id, tenant_id)"
-                + " REFERENCES " + Config.getConfig(start).getTenantsTable() +  " (app_id, tenant_id) ON DELETE CASCADE"
+                + " REFERENCES " + Config.getConfig(start).getTenantsTable() + " (app_id, tenant_id) ON DELETE CASCADE"
                 + ");";
     }
 
@@ -98,8 +102,9 @@ public class PasswordlessQueries {
                 + "link_code_hash CHAR(44) NOT NULL,"
                 + "created_at BIGINT UNSIGNED NOT NULL,"
                 + "PRIMARY KEY (app_id, tenant_id, code_id),"
-				+ "UNIQUE (app_id, tenant_id, link_code_hash),"
-                + "FOREIGN KEY (app_id, tenant_id, device_id_hash) REFERENCES " + Config.getConfig(start).getPasswordlessDevicesTable()
+                + "UNIQUE (app_id, tenant_id, link_code_hash),"
+                + "FOREIGN KEY (app_id, tenant_id, device_id_hash) REFERENCES " +
+                Config.getConfig(start).getPasswordlessDevicesTable()
                 + " (app_id, tenant_id, device_id_hash) ON DELETE CASCADE ON UPDATE CASCADE"
                 + ");";
     }
@@ -111,7 +116,8 @@ public class PasswordlessQueries {
 
     public static String getQueryToCreateDevicePhoneNumberIndex(Start start) {
         return "CREATE INDEX passwordless_devices_phone_number_index ON "
-                + Config.getConfig(start).getPasswordlessDevicesTable() + " (app_id, tenant_id, phone_number);"; // USING hash
+                + Config.getConfig(start).getPasswordlessDevicesTable() +
+                " (app_id, tenant_id, phone_number);"; // USING hash
     }
 
     public static String getQueryToCreateCodeDeviceIdHashIndex(Start start) {
@@ -125,8 +131,10 @@ public class PasswordlessQueries {
     }
 
 
-    public static void createDeviceWithCode(Start start, TenantIdentifier tenantIdentifier, String email, String phoneNumber, String linkCodeSalt,
-                                            PasswordlessCode code) throws StorageTransactionLogicException, StorageQueryException {
+    public static void createDeviceWithCode(Start start, TenantIdentifier tenantIdentifier, String email,
+                                            String phoneNumber, String linkCodeSalt,
+                                            PasswordlessCode code)
+            throws StorageTransactionLogicException, StorageQueryException {
         start.startTransaction(con -> {
             Connection sqlCon = (Connection) con.getConnection();
             try {
@@ -155,7 +163,9 @@ public class PasswordlessQueries {
                                                            TenantIdentifier tenantIdentifier, String deviceIdHash)
             throws StorageQueryException, SQLException {
 
-        ((ConnectionWithLocks) con).lock(tenantIdentifier.getAppId() + "~" + tenantIdentifier.getTenantId() + "~" + deviceIdHash + Config.getConfig(start).getPasswordlessDevicesTable());
+        ((ConnectionWithLocks) con).lock(
+                tenantIdentifier.getAppId() + "~" + tenantIdentifier.getTenantId() + "~" + deviceIdHash +
+                        Config.getConfig(start).getPasswordlessDevicesTable());
 
         String QUERY = "SELECT device_id_hash, email, phone_number, link_code_salt, failed_attempts FROM "
                 + getConfig(start).getPasswordlessDevicesTable()
@@ -173,7 +183,8 @@ public class PasswordlessQueries {
     }
 
     public static void incrementDeviceFailedAttemptCount_Transaction(Start start, Connection con,
-                                                                     TenantIdentifier tenantIdentifier, String deviceIdHash)
+                                                                     TenantIdentifier tenantIdentifier,
+                                                                     String deviceIdHash)
             throws SQLException, StorageQueryException {
         String QUERY = "UPDATE " + getConfig(start).getPasswordlessDevicesTable()
                 + " SET failed_attempts = failed_attempts + 1"
@@ -186,7 +197,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static void deleteDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                String deviceIdHash)
             throws SQLException, StorageQueryException {
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND device_id_hash = ?";
@@ -197,7 +209,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, @Nonnull String phoneNumber)
+    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con,
+                                                              TenantIdentifier tenantIdentifier,
+                                                              @Nonnull String phoneNumber)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -210,7 +224,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier, @Nonnull String phoneNumber, String userId)
+    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                              @Nonnull String phoneNumber, String userId)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -227,7 +242,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, @Nonnull String email)
+    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                        @Nonnull String email)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -240,7 +256,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier, @Nonnull String email, String userId)
+    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                        @Nonnull String email, String userId)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -257,7 +274,8 @@ public class PasswordlessQueries {
         });
     }
 
-    private static void createCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, PasswordlessCode code)
+    private static void createCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                               PasswordlessCode code)
             throws SQLException, StorageQueryException {
         String QUERY = "INSERT INTO " + getConfig(start).getPasswordlessCodesTable()
                 + "(app_id, tenant_id, code_id, device_id_hash, link_code_hash, created_at)"
@@ -287,7 +305,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode[] getCodesOfDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static PasswordlessCode[] getCodesOfDevice_Transaction(Start start, Connection con,
+                                                                  TenantIdentifier tenantIdentifier,
+                                                                  String deviceIdHash)
             throws StorageQueryException, SQLException {
         // We do not lock here, since the device is already locked earlier in the transaction.
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
@@ -311,7 +331,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCodeByLinkCodeHash_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String linkCodeHash)
+    public static PasswordlessCode getCodeByLinkCodeHash_Transaction(Start start, Connection con,
+                                                                     TenantIdentifier tenantIdentifier,
+                                                                     String linkCodeHash)
             throws StorageQueryException, SQLException {
         // We do not lock here, since the device is already locked earlier in the transaction.
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
@@ -330,7 +352,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String codeId)
+    public static void deleteCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                              String codeId)
             throws SQLException, StorageQueryException {
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND code_id = ?";
@@ -342,7 +365,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static UserInfo createUser(Start start, TenantIdentifier tenantIdentifier, String id, @Nullable String email, @Nullable String phoneNumber, long timeJoined)
+    public static UserInfo createUser(Start start, TenantIdentifier tenantIdentifier, String id, @Nullable String email,
+                                      @Nullable String phoneNumber, long timeJoined)
             throws StorageTransactionLogicException, StorageQueryException {
         return start.startTransaction(con -> {
             Connection sqlCon = (Connection) con.getConnection();
@@ -393,16 +417,21 @@ public class PasswordlessQueries {
                         pst.setString(5, phoneNumber);
                     });
                 }
-                UserInfo userInfo = userInfoWithTenantIds_transaction(start, sqlCon, new UserInfoPartial(id, email, phoneNumber, timeJoined));
+
+                UserInfoPartial userInfo = new UserInfoPartial(id, email, phoneNumber, timeJoined);
+                fillUserInfoWithTenantIds_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
+                fillUserInfoWithVerified_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
                 sqlCon.commit();
-                return userInfo;
+                return new UserInfo(id, userInfo.verified,
+                        userInfo.toLoginMethod());
             } catch (SQLException throwables) {
                 throw new StorageTransactionLogicException(throwables);
             }
         });
     }
 
-    private static UserInfoWithTenantId[] getUserInfosWithTenant(Start start, Connection con, AppIdentifier appIdentifier, String userId)
+    private static UserInfoWithTenantId[] getUserInfosWithTenant(Start start, Connection con,
+                                                                 AppIdentifier appIdentifier, String userId)
             throws StorageQueryException, SQLException {
         String QUERY = "SELECT pl_users.user_id as user_id, pl_users.email as email, "
                 + "pl_users.phone_number as phone_number, pl_users_to_tenant.tenant_id as tenant_id "
@@ -471,7 +500,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static int updateUserEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId, String email)
+    public static int updateUserEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                  String userId, String email)
             throws SQLException, StorageQueryException {
         {
             String QUERY = "UPDATE " + Config.getConfig(start).getPasswordlessUserToTenantTable()
@@ -495,7 +525,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static int updateUserPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId, String phoneNumber)
+    public static int updateUserPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                        String userId, String phoneNumber)
             throws SQLException, StorageQueryException {
         {
             String QUERY = "UPDATE " + Config.getConfig(start).getPasswordlessUserToTenantTable()
@@ -538,7 +569,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static PasswordlessDevice[] getDevicesByEmail(Start start, TenantIdentifier tenantIdentifier, @Nonnull String email)
+    public static PasswordlessDevice[] getDevicesByEmail(Start start, TenantIdentifier tenantIdentifier,
+                                                         @Nonnull String email)
             throws StorageQueryException, SQLException {
         String QUERY = "SELECT device_id_hash, email, phone_number, link_code_salt, failed_attempts FROM "
                 + getConfig(start).getPasswordlessDevicesTable()
@@ -585,7 +617,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode[] getCodesOfDevice(Start start, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static PasswordlessCode[] getCodesOfDevice(Start start, TenantIdentifier tenantIdentifier,
+                                                      String deviceIdHash)
             throws StorageQueryException, SQLException {
         try (Connection con = ConnectionPool.getConnection(start)) {
             // We can call the transaction version here because it doesn't lock anything.
@@ -593,7 +626,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static PasswordlessCode[] getCodesBefore(Start start, TenantIdentifier tenantIdentifier, long time) throws StorageQueryException, SQLException {
+    public static PasswordlessCode[] getCodesBefore(Start start, TenantIdentifier tenantIdentifier, long time)
+            throws StorageQueryException, SQLException {
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
                 + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND created_at < ?";
@@ -615,7 +649,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCode(Start start, TenantIdentifier tenantIdentifier, String codeId) throws StorageQueryException, SQLException {
+    public static PasswordlessCode getCode(Start start, TenantIdentifier tenantIdentifier, String codeId)
+            throws StorageQueryException, SQLException {
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
                 + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND code_id = ?";
@@ -632,7 +667,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCodeByLinkCodeHash(Start start, TenantIdentifier tenantIdentifier, String linkCodeHash)
+    public static PasswordlessCode getCodeByLinkCodeHash(Start start, TenantIdentifier tenantIdentifier,
+                                                         String linkCodeHash)
             throws StorageQueryException, SQLException {
         try (Connection con = ConnectionPool.getConnection(start)) {
             // We can call the transaction version here because it doesn't lock anything.
@@ -640,57 +676,66 @@ public class PasswordlessQueries {
         }
     }
 
-    public static List<UserInfo> getUsersByIdList(Start start, List<String> ids)
+    public static List<LoginMethod> getUsersInfoUsingIdList(Start start, Set<String> ids, AppIdentifier appIdentifier)
             throws SQLException, StorageQueryException {
         if (ids.size() > 0) {
             // No need to filter based on tenantId because the id list is already filtered for a tenant
-            StringBuilder QUERY = new StringBuilder("SELECT user_id, email, phone_number, time_joined "
-                    + "FROM " + getConfig(start).getPasswordlessUsersTable());
-            QUERY.append(" WHERE user_id IN (");
-            for (int i = 0; i < ids.size(); i++) {
-                QUERY.append("?");
-                if (i != ids.size() - 1) {
-                    // not the last element
-                    QUERY.append(",");
-                }
-            }
-            QUERY.append(")");
+            String QUERY = "SELECT user_id, email, phone_number, time_joined "
+                    + "FROM " + getConfig(start).getPasswordlessUsersTable() + " WHERE user_id IN (" +
+                    Utils.generateCommaSeperatedQuestionMarks(ids.size()) + ") AND app_id = ?";
 
-            List<UserInfoPartial> userInfos = execute(start, QUERY.toString(), pst -> {
-                for (int i = 0; i < ids.size(); i++) {
-                    // i+1 cause this starts with 1 and not 0
-                    pst.setString(i + 1, ids.get(i));
-                }
-            }, result -> {
-                List<UserInfoPartial> finalResult = new ArrayList<>();
-                while (result.next()) {
-                    finalResult.add(UserInfoRowMapper.getInstance().mapOrThrow(result));
-                }
-                return finalResult;
-            });
-            return userInfoWithTenantIds(start, userInfos);
+            try (Connection con = ConnectionPool.getConnection(start)) {
+                List<UserInfoPartial> userInfos = execute(con, QUERY, pst -> {
+                    int index = 1;
+                    for (String id : ids) {
+                        pst.setString(index, id);
+                        index++;
+                    }
+                    pst.setString(index, appIdentifier.getAppId());
+                }, result -> {
+                    List<UserInfoPartial> finalResult = new ArrayList<>();
+                    while (result.next()) {
+                        finalResult.add(UserInfoRowMapper.getInstance().mapOrThrow(result));
+                    }
+                    return finalResult;
+                });
+                fillUserInfoWithTenantIds_transaction(start, con, appIdentifier, userInfos);
+                fillUserInfoWithVerified_transaction(start, con, appIdentifier, userInfos);
+                return userInfos.stream().map(UserInfoPartial::toLoginMethod).collect(Collectors.toList());
+            }
         }
         return Collections.emptyList();
     }
 
-    public static UserInfo getUserById(Start start, AppIdentifier appIdentifier, String userId) throws StorageQueryException, SQLException {
+    public static UserInfo getUserById(Start start, AppIdentifier appIdentifier, String userId)
+            throws StorageQueryException, SQLException {
         String QUERY = "SELECT user_id, email, phone_number, time_joined FROM "
                 + getConfig(start).getPasswordlessUsersTable() + " WHERE app_id = ? AND user_id = ?";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
-            pst.setString(1, appIdentifier.getAppId());
-            pst.setString(2, userId);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+        try (Connection con = ConnectionPool.getConnection(start)) {
+            UserInfoPartial userInfo = execute(con, QUERY, pst -> {
+                pst.setString(1, appIdentifier.getAppId());
+                pst.setString(2, userId);
+            }, result -> {
+                if (result.next()) {
+                    return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                }
+                return null;
+            });
+            if (userInfo == null) {
+                return null;
             }
-            return null;
-        });
-        return userInfoWithTenantIds(start, userInfo);
+            fillUserInfoWithTenantIds_transaction(start, con, appIdentifier, userInfo);
+            fillUserInfoWithVerified_transaction(start, con, appIdentifier, userInfo);
+            return new UserInfo(userInfo.id, userInfo.verified,
+                    userInfo.toLoginMethod());
+        }
     }
 
-    public static UserInfoPartial getUserById(Start start, Connection sqlCon, AppIdentifier appIdentifier, String userId) throws StorageQueryException, SQLException {
-        // we don't need a LOCK here because this is already part of a transaction, and locked on app_id_to_user_id table
+    public static UserInfoPartial getUserById(Start start, Connection sqlCon, AppIdentifier appIdentifier,
+                                              String userId) throws StorageQueryException, SQLException {
+        // we don't need a LOCK here because this is already part of a transaction, and locked on app_id_to_user_id
+        // table
         String QUERY = "SELECT user_id, email, phone_number, time_joined FROM "
                 + getConfig(start).getPasswordlessUsersTable()
                 + " WHERE app_id = ? AND user_id = ?";
@@ -713,44 +758,66 @@ public class PasswordlessQueries {
                 + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pl_users_to_tenant "
                 + "JOIN " + getConfig(start).getPasswordlessUsersTable() + " AS pl_users "
                 + "ON pl_users.app_id = pl_users_to_tenant.app_id AND pl_users.user_id = pl_users_to_tenant.user_id "
-                + "WHERE pl_users_to_tenant.app_id = ? AND pl_users_to_tenant.tenant_id = ? AND pl_users_to_tenant.email = ? ";
+                +
+                "WHERE pl_users_to_tenant.app_id = ? AND pl_users_to_tenant.tenant_id = ? AND pl_users_to_tenant" +
+                ".email = ? ";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
-            pst.setString(1, tenantIdentifier.getAppId());
-            pst.setString(2, tenantIdentifier.getTenantId());
-            pst.setString(3, email);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+        try (Connection con = ConnectionPool.getConnection(start)) {
+            UserInfoPartial userInfo = execute(con, QUERY, pst -> {
+                pst.setString(1, tenantIdentifier.getAppId());
+                pst.setString(2, tenantIdentifier.getTenantId());
+                pst.setString(3, email);
+            }, result -> {
+                if (result.next()) {
+                    return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                }
+                return null;
+            });
+            if (userInfo == null) {
+                return null;
             }
-            return null;
-        });
-        return userInfoWithTenantIds(start, userInfo);
+            fillUserInfoWithTenantIds_transaction(start, con, tenantIdentifier.toAppIdentifier(), userInfo);
+            fillUserInfoWithVerified_transaction(start, con, tenantIdentifier.toAppIdentifier(), userInfo);
+            return new UserInfo(userInfo.id, userInfo.verified,
+                    userInfo.toLoginMethod());
+        }
     }
 
-    public static UserInfo getUserByPhoneNumber(Start start, TenantIdentifier tenantIdentifier, @Nonnull String phoneNumber)
+    public static UserInfo getUserByPhoneNumber(Start start, TenantIdentifier tenantIdentifier,
+                                                @Nonnull String phoneNumber)
             throws StorageQueryException, SQLException {
         String QUERY = "SELECT pl_users.user_id as user_id, pl_users.email as email, "
                 + "pl_users.phone_number as phone_number, pl_users.time_joined as time_joined "
                 + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pl_users_to_tenant "
                 + "JOIN " + getConfig(start).getPasswordlessUsersTable() + " AS pl_users "
                 + "ON pl_users.app_id = pl_users_to_tenant.app_id AND pl_users.user_id = pl_users_to_tenant.user_id "
-                + "WHERE pl_users_to_tenant.app_id = ? AND pl_users_to_tenant.tenant_id = ? AND pl_users_to_tenant.phone_number = ? ";
+                +
+                "WHERE pl_users_to_tenant.app_id = ? AND pl_users_to_tenant.tenant_id = ? AND pl_users_to_tenant" +
+                ".phone_number = ? ";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
-            pst.setString(1, tenantIdentifier.getAppId());
-            pst.setString(2, tenantIdentifier.getTenantId());
-            pst.setString(3, phoneNumber);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+        try (Connection con = ConnectionPool.getConnection(start)) {
+            UserInfoPartial userInfo = execute(con, QUERY, pst -> {
+                pst.setString(1, tenantIdentifier.getAppId());
+                pst.setString(2, tenantIdentifier.getTenantId());
+                pst.setString(3, phoneNumber);
+            }, result -> {
+                if (result.next()) {
+                    return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                }
+                return null;
+            });
+            if (userInfo == null) {
+                return null;
             }
-            return null;
-        });
-        return userInfoWithTenantIds(start, userInfo);
+            fillUserInfoWithTenantIds_transaction(start, con, tenantIdentifier.toAppIdentifier(), userInfo);
+            fillUserInfoWithVerified_transaction(start, con, tenantIdentifier.toAppIdentifier(), userInfo);
+            return new UserInfo(userInfo.id, userInfo.verified,
+                    userInfo.toLoginMethod());
+        }
     }
 
-    public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon,
+                                                        TenantIdentifier tenantIdentifier, String userId)
             throws StorageQueryException, SQLException {
         UserInfoPartial userInfo = PasswordlessQueries.getUserById(start, sqlCon,
                 tenantIdentifier.toAppIdentifier(), userId);
@@ -785,7 +852,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon,
+                                                             TenantIdentifier tenantIdentifier, String userId)
             throws SQLException, StorageQueryException {
         { // all_auth_recipe_users
             String QUERY = "DELETE FROM " + getConfig(start).getUsersTable()
@@ -803,42 +871,66 @@ public class PasswordlessQueries {
         // automatically deleted from passwordless_user_to_tenant because of foreign key constraint
     }
 
-    private static UserInfo userInfoWithTenantIds(Start start, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithVerified_transaction(Start start,
+                                                                        Connection sqlCon,
+                                                                        AppIdentifier appIdentifier,
+                                                                        UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, Arrays.asList(userInfo)).get(0);
-        }
+        return fillUserInfoWithVerified_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds(Start start, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithVerified_transaction(Start start,
+                                                                              Connection sqlCon,
+                                                                              AppIdentifier appIdentifier,
+                                                                              List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, userInfos);
+        List<EmailVerificationQueries.UserIdAndEmail> userIdsAndEmails = new ArrayList<>();
+        for (UserInfoPartial userInfo : userInfos) {
+            if (userInfo.email == null) {
+                // phone number, so we mark it as verified
+                userInfo.verified = true;
+            } else {
+                userIdsAndEmails.add(new EmailVerificationQueries.UserIdAndEmail(userInfo.id, userInfo.email));
+            }
         }
+        List<String> userIdsThatAreVerified = EmailVerificationQueries.isEmailVerified_transaction(start, sqlCon,
+                appIdentifier,
+                userIdsAndEmails);
+        Set<String> verifiedUserIdsSet = new HashSet<>(userIdsThatAreVerified);
+        for (UserInfoPartial userInfo : userInfos) {
+            if (verifiedUserIdsSet.contains(userInfo.id)) {
+                userInfo.verified = true;
+            }
+        }
+        return userInfos;
     }
 
-    private static UserInfo userInfoWithTenantIds_transaction(Start start, Connection sqlCon, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                         AppIdentifier appIdentifier,
+                                                                         UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        return userInfoWithTenantIds_transaction(start, sqlCon, Arrays.asList(userInfo)).get(0);
+        return fillUserInfoWithTenantIds_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds_transaction(Start start, Connection sqlCon, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                               AppIdentifier appIdentifier,
+                                                                               List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
         String[] userIds = new String[userInfos.size()];
         for (int i = 0; i < userInfos.size(); i++) {
             userIds[i] = userInfos.get(i).id;
         }
 
-        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon, userIds);
+        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon,
+                appIdentifier,
+                userIds);
         List<UserInfo> result = new ArrayList<>();
         for (UserInfoPartial userInfo : userInfos) {
-            result.add(new UserInfo(userInfo.id, userInfo.email, userInfo.phoneNumber, userInfo.timeJoined,
-                    tenantIdsForUserIds.get(userInfo.id).toArray(new String[0])));
+            userInfo.tenantIds = tenantIdsForUserIds.get(userInfo.id).toArray(new String[0]);
         }
-
-        return result;
+        return userInfos;
     }
 
     private static class PasswordlessDeviceRowMapper implements RowMapper<PasswordlessDevice, ResultSet> {
@@ -881,6 +973,8 @@ public class PasswordlessQueries {
         public final long timeJoined;
         public final String email;
         public final String phoneNumber;
+        public String[] tenantIds;
+        public Boolean verified;
 
         UserInfoPartial(String id, @Nullable String email, @Nullable String phoneNumber, long timeJoined) {
             this.id = id.trim();
@@ -892,6 +986,13 @@ public class PasswordlessQueries {
 
             this.email = email;
             this.phoneNumber = phoneNumber;
+        }
+
+        public LoginMethod toLoginMethod() {
+            assert (tenantIds != null);
+            assert (verified != null);
+            return new LoginMethod(id, timeJoined, verified, new LoginMethod.PasswordlessInfo(email, phoneNumber),
+                    tenantIds);
         }
     }
 
