@@ -19,8 +19,10 @@ package io.supertokens.inmemorydb.queries;
 import io.supertokens.inmemorydb.ConnectionPool;
 import io.supertokens.inmemorydb.ConnectionWithLocks;
 import io.supertokens.inmemorydb.Start;
+import io.supertokens.inmemorydb.Utils;
 import io.supertokens.inmemorydb.config.Config;
 import io.supertokens.pluginInterface.RowMapper;
+import io.supertokens.pluginInterface.authRecipe.LoginMethod;
 import io.supertokens.pluginInterface.exceptions.StorageQueryException;
 import io.supertokens.pluginInterface.exceptions.StorageTransactionLogicException;
 import io.supertokens.pluginInterface.multitenancy.AppIdentifier;
@@ -32,6 +34,7 @@ import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static io.supertokens.inmemorydb.QueryExecutorTemplate.execute;
 import static io.supertokens.inmemorydb.QueryExecutorTemplate.update;
@@ -76,12 +79,14 @@ public class ThirdPartyQueries {
                 + "UNIQUE (app_id, tenant_id, third_party_id, third_party_user_id),"
                 + "PRIMARY KEY (app_id, tenant_id, user_id),"
                 + "FOREIGN KEY (app_id, tenant_id, user_id)"
-                + " REFERENCES " + Config.getConfig(start).getUsersTable() + "(app_id, tenant_id, user_id) ON DELETE CASCADE"
+                + " REFERENCES " + Config.getConfig(start).getUsersTable() +
+                "(app_id, tenant_id, user_id) ON DELETE CASCADE"
                 + ");";
         // @formatter:on
     }
 
-    public static UserInfo signUp(Start start, TenantIdentifier tenantIdentifier, String id, String email, UserInfo.ThirdParty thirdParty, long timeJoined)
+    public static UserInfo signUp(Start start, TenantIdentifier tenantIdentifier, String id, String email,
+                                  LoginMethod.ThirdParty thirdParty, long timeJoined)
             throws StorageQueryException, StorageTransactionLogicException {
         return start.startTransaction(con -> {
             Connection sqlCon = (Connection) con.getConnection();
@@ -135,9 +140,11 @@ public class ThirdPartyQueries {
                     });
                 }
 
-                UserInfo userInfo = userInfoWithTenantIds_transaction(start, sqlCon, new UserInfoPartial(id, email, thirdParty, timeJoined));
+                UserInfoPartial userInfo = new UserInfoPartial(id, email, thirdParty, timeJoined);
+                fillUserInfoWithTenantIds_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
+                fillUserInfoWithVerified_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
                 sqlCon.commit();
-                return userInfo;
+                return new UserInfo(id, userInfo.verified, userInfo.toLoginMethod());
 
             } catch (SQLException throwables) {
                 throw new StorageTransactionLogicException(throwables);
@@ -170,52 +177,56 @@ public class ThirdPartyQueries {
 
     public static UserInfo getThirdPartyUserInfoUsingId(Start start, AppIdentifier appIdentifier, String userId)
             throws SQLException, StorageQueryException {
+        // TODO: this should go away..
         String QUERY = "SELECT user_id, third_party_id, third_party_user_id, email, time_joined FROM "
                 + getConfig(start).getThirdPartyUsersTable() + " WHERE app_id = ? AND user_id = ?";
 
-        UserInfoPartial userInfo = execute(start, QUERY.toString(), pst -> {
-            pst.setString(1, appIdentifier.getAppId());
-            pst.setString(2, userId);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+        try (Connection con = ConnectionPool.getConnection(start)) {
+            UserInfoPartial userInfo = execute(con, QUERY.toString(), pst -> {
+                pst.setString(1, appIdentifier.getAppId());
+                pst.setString(2, userId);
+            }, result -> {
+                if (result.next()) {
+                    return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                }
+                return null;
+            });
+            if (userInfo == null) {
+                return null;
             }
-            return null;
-        });
-        return userInfoWithTenantIds(start, userInfo);
+            fillUserInfoWithTenantIds_transaction(start, con, appIdentifier, userInfo);
+            fillUserInfoWithVerified_transaction(start, con, appIdentifier, userInfo);
+            return new UserInfo(userInfo.id, userInfo.verified, userInfo.toLoginMethod());
+        }
     }
 
-    public static List<UserInfo> getUsersInfoUsingIdList(Start start, List<String> ids)
+    public static List<LoginMethod> getUsersInfoUsingIdList(Start start, Set<String> ids, AppIdentifier appIdentifier)
             throws SQLException, StorageQueryException {
         if (ids.size() > 0) {
-            // No need to filter based on tenantId because the id list is already filtered for a tenant
-            StringBuilder QUERY = new StringBuilder(
-                    "SELECT user_id, third_party_id, third_party_user_id, email, time_joined "
-                            + "FROM " + getConfig(start).getThirdPartyUsersTable());
-            QUERY.append(" WHERE user_id IN (");
-            for (int i = 0; i < ids.size(); i++) {
+            String QUERY = "SELECT user_id, third_party_id, third_party_user_id, email, time_joined "
+                    + "FROM " + getConfig(start).getThirdPartyUsersTable() + " WHERE user_id IN (" +
+                    Utils.generateCommaSeperatedQuestionMarks(ids.size()) + ") AND app_id = ?";
 
-                QUERY.append("?");
-                if (i != ids.size() - 1) {
-                    // not the last element
-                    QUERY.append(",");
-                }
+            try (Connection con = ConnectionPool.getConnection(start)) {
+                List<UserInfoPartial> userInfos = execute(con, QUERY, pst -> {
+                    int index = 1;
+                    for (String id : ids) {
+                        pst.setString(index, id);
+                        index++;
+                    }
+                    pst.setString(index, appIdentifier.getAppId());
+                }, result -> {
+                    List<UserInfoPartial> finalResult = new ArrayList<>();
+                    while (result.next()) {
+                        finalResult.add(UserInfoRowMapper.getInstance().mapOrThrow(result));
+                    }
+                    return finalResult;
+                });
+
+                fillUserInfoWithTenantIds_transaction(start, con, appIdentifier, userInfos);
+                fillUserInfoWithVerified_transaction(start, con, appIdentifier, userInfos);
+                return userInfos.stream().map(UserInfoPartial::toLoginMethod).collect(Collectors.toList());
             }
-            QUERY.append(")");
-
-            List<UserInfoPartial> userInfos = execute(start, QUERY.toString(), pst -> {
-                for (int i = 0; i < ids.size(); i++) {
-                    // i+1 cause this starts with 1 and not 0
-                    pst.setString(i + 1, ids.get(i));
-                }
-            }, result -> {
-                List<UserInfoPartial> finalResult = new ArrayList<>();
-                while (result.next()) {
-                    finalResult.add(UserInfoRowMapper.getInstance().mapOrThrow(result));
-                }
-                return finalResult;
-            });
-            return userInfoWithTenantIds(start, userInfos);
         }
         return Collections.emptyList();
     }
@@ -233,18 +244,26 @@ public class ThirdPartyQueries {
                 + "WHERE tp_users_to_tenant.app_id = ? AND tp_users_to_tenant.tenant_id = ? "
                 + "AND tp_users_to_tenant.third_party_id = ? AND tp_users_to_tenant.third_party_user_id = ?";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
-            pst.setString(1, tenantIdentifier.getAppId());
-            pst.setString(2, tenantIdentifier.getTenantId());
-            pst.setString(3, thirdPartyId);
-            pst.setString(4, thirdPartyUserId);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+
+        try (Connection con = ConnectionPool.getConnection(start)) {
+            UserInfoPartial userInfo = execute(con, QUERY, pst -> {
+                pst.setString(1, tenantIdentifier.getAppId());
+                pst.setString(2, tenantIdentifier.getTenantId());
+                pst.setString(3, thirdPartyId);
+                pst.setString(4, thirdPartyUserId);
+            }, result -> {
+                if (result.next()) {
+                    return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                }
+                return null;
+            });
+            if (userInfo == null) {
+                return null;
             }
-            return null;
-        });
-        return userInfoWithTenantIds(start, userInfo);
+            fillUserInfoWithTenantIds_transaction(start, con, tenantIdentifier.toAppIdentifier(), userInfo);
+            fillUserInfoWithVerified_transaction(start, con, tenantIdentifier.toAppIdentifier(), userInfo);
+            return new UserInfo(userInfo.id, userInfo.verified, userInfo.toLoginMethod());
+        }
     }
 
     public static void updateUserEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
@@ -266,7 +285,8 @@ public class ThirdPartyQueries {
                                                           String thirdPartyUserId)
             throws SQLException, StorageQueryException {
 
-        ((ConnectionWithLocks) con).lock(appIdentifier.getAppId() + "~" + thirdPartyId + "~" + thirdPartyUserId + Config.getConfig(start).getThirdPartyUsersTable());
+        ((ConnectionWithLocks) con).lock(appIdentifier.getAppId() + "~" + thirdPartyId + "~" + thirdPartyUserId +
+                Config.getConfig(start).getThirdPartyUsersTable());
 
         String QUERY = "SELECT user_id, third_party_id, third_party_user_id, email, time_joined FROM "
                 + getConfig(start).getThirdPartyUsersTable()
@@ -281,14 +301,20 @@ public class ThirdPartyQueries {
             }
             return null;
         });
-        return userInfoWithTenantIds_transaction(start, con, userInfo);
+        if (userInfo == null) {
+            return null;
+        }
+        fillUserInfoWithTenantIds_transaction(start, con, appIdentifier, userInfo);
+        fillUserInfoWithVerified_transaction(start, con, appIdentifier, userInfo);
+        return new UserInfo(userInfo.id, userInfo.verified, userInfo.toLoginMethod());
     }
 
     private static UserInfoPartial getUserInfoUsingUserId(Start start, Connection con,
                                                           AppIdentifier appIdentifier, String userId)
             throws SQLException, StorageQueryException {
 
-        // we don't need a LOCK here because this is already part of a transaction, and locked on app_id_to_user_id table
+        // we don't need a LOCK here because this is already part of a transaction, and locked on app_id_to_user_id
+        // table
         String QUERY = "SELECT user_id, third_party_id, third_party_user_id, email, time_joined FROM "
                 + getConfig(start).getThirdPartyUsersTable()
                 + " WHERE app_id = ?  AND user_id = ?";
@@ -316,21 +342,27 @@ public class ThirdPartyQueries {
                 + "WHERE tp_users_to_tenant.app_id = ? AND tp_users_to_tenant.tenant_id = ? AND tp_users.email = ? "
                 + "ORDER BY time_joined";
 
-        List<UserInfoPartial> userInfos = execute(start, QUERY.toString(), pst -> {
-            pst.setString(1, tenantIdentifier.getAppId());
-            pst.setString(2, tenantIdentifier.getTenantId());
-            pst.setString(3, email);
-        }, result -> {
-            List<UserInfoPartial> finalResult = new ArrayList<>();
-            while (result.next()) {
-                finalResult.add(UserInfoRowMapper.getInstance().mapOrThrow(result));
-            }
-            return finalResult;
-        });
-        return userInfoWithTenantIds(start, userInfos).toArray(new UserInfo[0]);
+        try (Connection con = ConnectionPool.getConnection(start)) {
+            List<UserInfoPartial> userInfos = execute(con, QUERY.toString(), pst -> {
+                pst.setString(1, tenantIdentifier.getAppId());
+                pst.setString(2, tenantIdentifier.getTenantId());
+                pst.setString(3, email);
+            }, result -> {
+                List<UserInfoPartial> finalResult = new ArrayList<>();
+                while (result.next()) {
+                    finalResult.add(UserInfoRowMapper.getInstance().mapOrThrow(result));
+                }
+                return finalResult;
+            });
+            fillUserInfoWithTenantIds_transaction(start, con, tenantIdentifier.toAppIdentifier(), userInfos);
+            fillUserInfoWithVerified_transaction(start, con, tenantIdentifier.toAppIdentifier(), userInfos);
+            return userInfos.stream().map(x -> new UserInfo(x.id, x.verified, x.toLoginMethod()))
+                    .toArray(UserInfo[]::new);
+        }
     }
 
-    public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon,
+                                                        TenantIdentifier tenantIdentifier, String userId)
             throws SQLException, StorageQueryException {
         UserInfoPartial userInfo = ThirdPartyQueries.getUserInfoUsingUserId(start, sqlCon,
                 tenantIdentifier.toAppIdentifier(), userId);
@@ -364,7 +396,8 @@ public class ThirdPartyQueries {
         }
     }
 
-    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon,
+                                                             TenantIdentifier tenantIdentifier, String userId)
             throws SQLException, StorageQueryException {
         { // all_auth_recipe_users
             String QUERY = "DELETE FROM " + getConfig(start).getUsersTable()
@@ -382,55 +415,80 @@ public class ThirdPartyQueries {
         // automatically deleted from thirdparty_user_to_tenant because of foreign key constraint
     }
 
-    private static UserInfo userInfoWithTenantIds(Start start, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithVerified_transaction(Start start, Connection sqlCon,
+                                                                        AppIdentifier appIdentifier,
+                                                                        UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, Arrays.asList(userInfo)).get(0);
-        }
+        return fillUserInfoWithVerified_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds(Start start, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithVerified_transaction(Start start, Connection sqlCon,
+                                                                              AppIdentifier appIdentifier,
+                                                                              List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, userInfos);
+        List<EmailVerificationQueries.UserIdAndEmail> userIdsAndEmails = new ArrayList<>();
+        for (UserInfoPartial userInfo : userInfos) {
+            userIdsAndEmails.add(new EmailVerificationQueries.UserIdAndEmail(userInfo.id, userInfo.email));
         }
+        List<String> userIdsThatAreVerified = EmailVerificationQueries.isEmailVerified_transaction(start, sqlCon,
+                appIdentifier,
+                userIdsAndEmails);
+        Set<String> verifiedUserIdsSet = new HashSet<>(userIdsThatAreVerified);
+        for (UserInfoPartial userInfo : userInfos) {
+            if (verifiedUserIdsSet.contains(userInfo.id)) {
+                userInfo.verified = true;
+            }
+        }
+        return userInfos;
     }
 
-    private static UserInfo userInfoWithTenantIds_transaction(Start start, Connection sqlCon, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                         AppIdentifier appIdentifier,
+                                                                         UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        return userInfoWithTenantIds_transaction(start, sqlCon, Arrays.asList(userInfo)).get(0);
+        return fillUserInfoWithTenantIds_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds_transaction(Start start, Connection sqlCon, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                               AppIdentifier appIdentifier,
+                                                                               List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
         String[] userIds = new String[userInfos.size()];
         for (int i = 0; i < userInfos.size(); i++) {
             userIds[i] = userInfos.get(i).id;
         }
 
-        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon, userIds);
-        List<UserInfo> result = new ArrayList<>();
+        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon,
+                appIdentifier,
+                userIds);
         for (UserInfoPartial userInfo : userInfos) {
-            result.add(new UserInfo(userInfo.id, userInfo.email, userInfo.thirdParty, userInfo.timeJoined,
-                    tenantIdsForUserIds.get(userInfo.id).toArray(new String[0])));
+            userInfo.tenantIds = tenantIdsForUserIds.get(userInfo.id).toArray(new String[0]);
         }
-
-        return result;
+        return userInfos;
     }
 
     private static class UserInfoPartial {
         public final String id;
         public final String email;
-        public final UserInfo.ThirdParty thirdParty;
+        public final LoginMethod.ThirdParty thirdParty;
         public final long timeJoined;
+        public String[] tenantIds;
+        public Boolean verified;
 
-        public UserInfoPartial(String id, String email, UserInfo.ThirdParty thirdParty, long timeJoined) {
+        public UserInfoPartial(String id, String email, LoginMethod.ThirdParty thirdParty, long timeJoined) {
             this.id = id.trim();
             this.email = email;
             this.thirdParty = thirdParty;
             this.timeJoined = timeJoined;
+        }
+
+        public LoginMethod toLoginMethod() {
+            assert (tenantIds != null);
+            assert (verified != null);
+            return new LoginMethod(id, timeJoined, verified, email,
+                    new LoginMethod.ThirdParty(thirdParty.id, thirdParty.userId), tenantIds);
         }
     }
 
@@ -447,7 +505,7 @@ public class ThirdPartyQueries {
         @Override
         public UserInfoPartial map(ResultSet result) throws Exception {
             return new UserInfoPartial(result.getString("user_id"), result.getString("email"),
-                    new UserInfo.ThirdParty(result.getString("third_party_id"),
+                    new LoginMethod.ThirdParty(result.getString("third_party_id"),
                             result.getString("third_party_user_id")),
                     result.getLong("time_joined"));
         }
